--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">flaga</string>
     <string name="polecenie">choose the colores that are not on the polish flag!</string>
+    <string name="ostrzezenie">tego przycisku nie wybieraj</string>
+    <string name="podsumowanie">brawo, to jest flaga poslki</string>
 </resources>
